# ostrich-desktop

./: .gitignore  README.md  geoip.dat1  justfile  pubspec.yaml
android/app/: build.gradle
assets/data/: ostrich.db  socks_auto.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: intl_en.arb  intl_zh.arb
lib/node/bloc/: node_bloc.dart  node_event.dart  node_state.dart
lib/node/database/: db.dart
lib/node/models/: node_model.dart
lib/node/provider/: node_provider.dart
lib/unit/: bridge_generated.dart  current_page.dart  http.dart  init.dart  native_api.dart  serverConfig.dart  spuntil.dart  utils.dart
lib/view/: addServerList.dart  home.dart
lib/view/proxy/: home.dart  login.dart  node_list.dart
lib/widget/: open_dialog.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist  bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/native.xcodeproj/: project.pbxproj
native/native.xcodeproj/xcuserdata/myway.xcuserdatad/xcschemes/: xcschememanagement.plist
native/src/: api.rs  bridge_generated.dart  bridge_generated.io.rs  bridge_generated.rs
native/tests/: test_ping.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  bridge_generated.h  main.cpp
(+9 files in other folders)
